smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/unclosed-text-block.smithy
// Syntax error at line 7, column 1: Expected: '"', but found '[EOF]'
namespace smithy.example

@documentation("""
)
string MyString
